# temp_collector

./: Cargo.toml  Dockerfile  README.md
sql/: Temperature tables.sql
src/: main.rs  models.rs  routes.rs
