[package]
name = "temp_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls" , "postgres"] }
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3.2"
