[package]
name = "temp_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.133"
sqlx = { version = "0.5.10", features = ["runtime-actix-native-tls" , "postgres", "macros", "chrono"] }
actix-web = { version = "4.0.0-beta.20" }
dotenv = "0.15.0"